# bore-lobby

./: .gitignore  Cargo.toml  README.md  flake.nix
.claude/: settings.local.json
client/: Cargo.toml
client/src/: app.rs  main.rs  net.rs  ui.rs
common/: Cargo.toml
common/src/: game.rs  protocol.rs
games/proset/: Cargo.toml
games/proset/src/: card.rs  client.rs  engine.rs  lib.rs  protocol.rs  ui.rs
server/: Cargo.toml
server/src/: connection.rs  lobby.rs  main.rs
