[package]
name = "socket-lobby-client"
version = "0.1.0"
edition = "2021"

[dependencies]
socket-lobby-common = { path = "../common" }
socket-lobby-proset = { path = "../games/proset" }
serde_json = { workspace = true }
tokio = { workspace = true }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-lite = "2"
