[package]
name = "bore-lobby-proset"
version = "0.1.0"
edition = "2021"

[dependencies]
bore-lobby-common = { path = "../../common" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
